Reorganised the SCSS codes into different files and folders, added information of charities to donation.html and edited the design of that page, edited the responsiveness and design of index.html, gave each marker in map.html information windows and edited the data for statistics.html.

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
         <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-        <a href="/" class="navbar-brand">Charity Base</a>
+        <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
         <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
   
@@ -59,8 +59,8 @@
     </nav>
     <section class="contactBG">
         <div class="container-fluid text-center contactHeading">
-            <h1>Got Any Question Or Causes That You Would Like To Be Included On This Website?</h1>
-            <h2>Please contact me by filling in the textboxes below!</h2>
+            <h1>Got Any Questions Or Causes That You Would Like To Be Included Onto This Website?</h1>
+            <h2>Please contact me by filling in the form below!</h2>
         </div>
 
         <div class="container-fluid">
@@ -79,7 +79,7 @@
                 <div class="row">
 
                     <div class="forms center-form">
-                        <textarea name="Message" id="contactMessage" cols="35" rows="10" placeholder="Enter a Message" required></textarea>
+                        <textarea name="Message" id="contactMessage" cols="35" rows="10" placeholder="Enter A Message" required></textarea>
                     </div>
                 </div>
 
