--- a/donate.html
+++ b/donate.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
         <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-        <a href="/" class="navbar-brand">Charity Base</a>
+        <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
         <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
   
@@ -48,9 +48,7 @@
             </ul>
         </div>
     </nav>
-    <section>
-        <h1 class="charitiesH1 text-center">Charities</h1>
-    </section>
+
     <section>
         <div id="AsiaAfricaCharityCarouselIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -87,10 +85,14 @@
     </section>
 
     <section>
+        <h1 class="charitiesH1 text-center underline">Charities</h1>
+    </section>
+
+    <section>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="text-center">
+                    <div class="text-center donatePageHeadings">
                         <h2>Asia:</h2>
                     </div>
 
@@ -243,7 +245,7 @@
                                     <div class="charity1-text text-center">
                                         <h3>The Fred Hollows Foundation</h3>
                                         <p>
-                                            Around two million people in Pakistan are blind in both eyes, so this organisation tries to reach as many of them as possible, in order to cure their eyesights. They are currently working in four provinces of Pakist and, if you would like to donate or
+                                            Around two million people in Pakistan are blind in both eyes, so this organisation tries to reach as many of them as possible, in order to cure their eyesights. They are currently working in four provinces of Pakistan, if you would like to donate or
                                             find out more, please click the button below!
                                         </p>
                                         <a href="https://www.hollows.org/au/what-we-do/where-we-work/south-asia/pakistan?gclid=Cj0KCQjwov3nBRDFARIsANgsdoE1Y0475e9NddjyxJi1CfwnKv1WTbiz2UFEmKg6DSXFR4sg3VP4d4UaAl3IEALw_wcB&gclsrc=aw.ds" value="TheFredHollowsFoundationPakistan" target="_blank"
@@ -276,7 +278,7 @@
 
 
                 <div class="col-sm-6">
-                    <div class="text-center">
+                    <div class="text-center donatePageHeadings">
                         <h2>Africa:</h2>
 
                     </div>
@@ -438,7 +440,7 @@
 
                                     <div class="charity1-text text-center">
                                         <h3>SOS Children's Villages</h3>
-                                        <p>In Botswana, AIDS has been a big issue, which causes many orphans to require parental support, In addition, although the economic growth is going well, there is a high poverty rate and children are malnourished.
+                                        <p>In Botswana, AIDS has been a big issue, which causes many orphans to require parental support. In addition, although the economic growth is going well, there is a high poverty rate and children are malnourished.
                                             Find out more and donate by clicking the button below.</p>
                                         <a href="https://www.sos-childrensvillages.org/where-we-help/africa/botswana" value="SOSChildrensVillagesBotswana" target="_blank" class="btn donateButtonStyle">Donate here</a>
                                     </div>
@@ -491,7 +493,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="text-center">
+                    <div class="text-center donatePageHeadings">
                         <h2>South America:</h2>
 
                     </div>
@@ -524,7 +526,7 @@
                                     <div class="charity1-text text-center">
                                         <h3>Guyana Medical Relief</h3>
                                         <p>
-                                            Guyeana is the second poorest country in South America. People require help to get medical aid because of a shortage of dollars to provide everyone with medical support. Therefore, Guyana Medical Relief helps them through shipments and with your donation
+                                            Guyana is the second poorest country in South America. People require help to get medical aid because of a shortage of dollars to provide everyone with medical support. Therefore, Guyana Medical Relief helps them through shipments and with your donation
                                             you can help more people.</p>
                                         <a href="https://guyanamedicalrelief.com/" value="GuyanaMedicalRelief" target="_blank" class="btn donateButtonStyle">Donate here</a>
                                     </div>
@@ -543,8 +545,8 @@
                                     <div class="charity1-text text-center">
                                         <h3>We</h3>
                                         <p>
-                                            There are man indegenous people in Ecuador, who have limitd access to clean water, education, health care, economic opportunities and more. More than a quarter of the population suffers from chronic malnutrition, while more than half of the indigenous
-                                            people live in poverty. It takaes hours for children to get to school and many children shall stay home to do chores in the household. So, the organisation called 'We' built schools for children to have better
+                                            There are man indegenous people in Ecuador, who have limited access to clean water, education, health care, economic opportunities and more. More than a quarter of the population suffers from chronic malnutrition, while more than half of the indigenous
+                                            people live in poverty. It takes hours for children to get to school and many children shall stay home to do chores in the household. So, the organisation called 'We' built schools for children to have better
                                             access to educated, and they help indigenous people to have easier access to clean water, health care programmes and alternative ways of income. For more information and to donate please click the button below.
                                         </p>
                                         <a href="https://www.we.org/we-villages/where-we-work/ecuador/" value="WeEcuador" target="_blank" class="btn donateButtonStyle">Donate here</a>
@@ -595,7 +597,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="text-center">
+                    <div class="text-center donatePageHeadings">
                         <h2>Europe:</h2>
 
                     </div>
@@ -640,9 +642,9 @@
                         <div class="row">
                             <div class="col-12">
                                 <div id="charity-1">
-                                    <button class="charity-1-collapse">Kosovo</button>
+                                    <button class="charity-1-collapse">Kosovo, Serbia</button>
 
-                                    <div class="charity1-text">
+                                    <div class="charity1-text text-center">
                                         <h3>SOS Children's Villages</h3>
                                         <p>After refugees fled from Albania in the year 1999, SOS Children's Villages offers kindergartens, family-based care and social centers in the capital city of Pristina. Click on the button below to find out more and
                                             to donate!</p>
@@ -692,7 +694,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="text-center">
+                    <div class="text-center donatePageHeadings">
                         <h2>North America:</h2>
 
                     </div>
@@ -702,7 +704,7 @@
                                 <div id="charity-1">
                                     <button class="charity-1-collapse">Mexico</button>
 
-                                    <div class="charity1-text">
+                                    <div class="charity1-text text-center">
                                         <h3>Misión Mèxico</h3>
                                         <p>This charity organisation focuses on helping orphans and children, who got abused, neglected or abandoned, and a lot of them have backgrounds of extreme poverty. Please click the button below for more information
                                             and to donate!</p>
@@ -748,14 +750,14 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="text-center">
-                        <h2>Australia:</h2>
+                    <div class="text-center donatePageHeadings">
+                        <h2>Oceania:</h2>
                     </div>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
                                 <div id="charity-1">
-                                    <button class="charity-1-collapse">Illnesses and Injuries</button>
+                                    <button class="charity-1-collapse">Australia - Illnesses and Injuries</button>
 
                                     <div class="charity1-text text-center">
                                         <h3>Ronald McDonald House Charities</h3>
@@ -771,7 +773,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div id="charity-1">
-                                    <button class="charity-1-collapse">Red Cross</button>
+                                    <button class="charity-1-collapse">Australia - Red Cross</button>
 
                                     <div class="charity1-text text-center">
                                         <h3>Australian Red Cross</h3>
