--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
         <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-        <a href="/" class="navbar-brand">Charity Base</a>
+        <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
         <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
   
@@ -54,11 +54,10 @@
             <div class="row">
                 <div class="col-9">
                     <div class="textHP1 text-center">
-                        <h1>Help People In Need.</h1>
+                        <h1 class="underline">Help People In Need.</h1>
                         <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
                             <br />
                             <a href="donate.html" value="donateButtonHP" class="btn btn-primary buttonStyle">Donate here</a>
-                            <span class="bottomLine"></span>
                         </p>
 
 
@@ -73,11 +72,15 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <section class="section1">
-                        <h2 class="header">The Struggle for Food.</h2>
-                        <p class="text">In some countries, a single plate of food can even cost up to around 70$ or even about 200$. <span id="dots1" class="dots">...</span><span id="more1" class="more">About 45% children, under the age of five, are caused to pass away, due to malnutrition. </span></p>
-                        <button id="readBtn1" class="readBtn btn-info">Read More</button>
-                        <p class="text">For statistics, please click <a href="statistics.html">here!</a>
-                        </p>
+                        <h2 class="header">The Struggle for Food and Health Care.</h2>
+                        <p class="text2">In some countries, a single plate of food can even cost up to around 70$ or even about 200$. About 45% children, under the age of five, are caused to pass away, due to malnutrition. <span id="dots1" class="dots">...</span>
+                            <span id="more1" class="more">In many countries, people live in slums, ran away, suffer mentally and physically from wars, got affected by natural disasters, etc. So, they do not have much access to nutritions, medications or shelter and require various
+                                kinds of support! For statistics, please click <a href="statistics.html">here!</a>
+                            
+                            </span>
+                            <button id="readBtn1" class="readBtn btn-info">Read More</button></p>
+                        <span class="bottomLine"></span>
+
 
                         <!--https://www.foodaidfoundation.org/world-hunger-statistics.html
                             https://insight.wfp.org/where-do-you-think-you-would-find-the-most-expensive-plate-of-food-in-the-world-408ed2856108
@@ -93,7 +96,7 @@
             </div>
         </div>
     </div>
-    <div class="hpimg-4">
+    <div class="hpimg-3">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-10 mx-auto text-center">
@@ -104,7 +107,7 @@
                         <p class="textGDP">
                             The GDP per capital and GDP growth play huge roles in a country's economic status, as they show measurements of a country's standard of living, how prosperous the citizens of a country feel, and how fast a country's economy is growing.
                             <span id="dots2" class="dots">...</span><span id="more2" class="more">These are very low
-                            in many countries as there are multiple problems, such as the status of their labour, lands, capital and enterprises. For statistics, please click <a href="">here!</a></span>
+                            in many countries as there are multiple problems, such as the status of their labour, lands, capital and enterprises. For statistics, please click <a href="statistics.html">here!</a></span>
                             <button id="readBtn2" class="readBtn btn-info">Read More</button>
 
                             <blockquote class="MotherTeresaQuote text-center">
@@ -134,15 +137,15 @@
             </div>
         </div>
     </div>
-    <div class="hpimg-3">
+    <div class="hpimg-4">
         <!-- BG-IMG: https://pxhere.com/en/photo/1053497 -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <section class="section1">
                         <h2 class="header">The Poverty Trap.</h2>
-                        <p class="text">When a country does not have a enough capital, i.e. machinary, tools and buildings, people strive to produce goods and services. Therefore, they economic development and growth decreases and it becomes difficult to gain the capital
-                            that they require. As a result, they get trapped into a poverty cycle. However, you could change lives today by donating! Find more information, <a href="">here!</a><span class="bottomLine"></span>
+                        <p class="text2">When a country does not have a enough capital, i.e. machinary, tools and buildings, people strive to produce goods and services. Therefore, they economic development and growth decreases and it becomes difficult to gain the capital
+                            that they require. As a result, they get trapped into a poverty cycle. However, you could change lives today by donating! Find more information, <a href="statistics.html">here!</a><span class="bottomLine"></span>
                             <!--
                             Poverty Trap: 
                             https://www.investopedia.com/terms/p/poverty-trap.asp
@@ -167,8 +170,8 @@
             <div class="row">
                 <div class="col-3">
                     <div class="textHP2">
-                        <h2>Please Donate<span class="bottomLine"></span></h2>
-                        <button class="btn btn-primary">Donate Here!</button>
+                        <h2>Please Donate!</h2>
+                        <a href="donate.html" value="donateButtonHP" class="btn btn-primary buttonStyle">Donate here</a>
                     </div>
                 </div>
             </div>
