I worked on the graphs in statistics.html, added information to the markers in map.html and redesigned the mobile and tablet sizes of the homepage.

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
 
     <!--Load CSS File-->
-    <link rel="stylesheet" href="assets/scss/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
     <!--EmailJS-->
     <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
@@ -23,7 +23,7 @@
         })();
     </script>-->
 
-    <title>Document</title>
+    <title>Charity Base: Contact Page</title>
 </head>
 
 
