--- a/map.html
+++ b/map.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/scss/style.css" type="text/css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <title>Charity Base: Map</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-light">
 
         <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
         <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
