I redesigned the homepage and reorganised the Javascript codes by moving them into separate JS files.

--- a/donate.html
+++ b/donate.html
@@ -735,29 +735,7 @@
         </div>
     </section>
 
-    <script>
-        var collapse = document.getElementsByClassName("charity-collapse");
-        var i;
-
-        for (i = 0; collapse.length; i++) {
-            collapse[i].addEventListener("click", function() {
-                this.classList.toggle("symbol");
-                console.log('the toggle for the symbol is working');
-                var content = this.nextElementSibling;
-                if (content.style.maxHeight) {
-                    content.style.maxHeight = null;
-                    console.log('if is working');
-                }
-                /*
-                    The classList won't work on IE9!!! IE9 is an old version!!!
-                */
-                else {
-                    content.style.maxHeight = content.scrollHeight + "px";
-                    console.log('else is working');
-                }
-            });
-        }
-    </script>
+    <script type="text/javascript" src="assets/js/donate.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
