Fixed some of the Vanilla Javascript and CSS for contact.html, donate.html and index.html. I improved the codes for the 'Read More' buttons, on the homepage, edited the first section of the hompage with Javascript to make it fade in, when it is opened, added color to the carousel buttons on donate.html and worked on the Email.JS codes to make it work in contact.html.

--- a/contact.html
+++ b/contact.html
@@ -16,12 +16,12 @@
 
     <!--EmailJS-->
     <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <!--<script type="text/javascript">
+    <script type="text/javascript">
         (function() {
             emailjs.init("user_jBNHynPWhUv5jwDizH0QT");
             emailjs.send("gmail", "first_template", { name: "Rian", notes: "The charity that I would like to include to this website is ..." });
         })();
-    </script>-->
+    </script>
 
     <title>Charity Base: Contact Page</title>
 </head>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="container-fluid">
-            <form onsubmit="return sendMail(this);" method="POST">
+            <form onsubmit="return sendMail(this);">
 
                 <div class="row">
                     <div class="forms center-form">
