--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </nav>
     <div class="hpimg-1">
         <!-- BG-IMG: https://www.maxpixel.net/Disease-Africa-Sick-Poverty-Young-Face-Sadness-1783794-->
-        <div class="container-fluid">
+        <div class="container-fluid section2-text" id="section2-text">
             <div class="row">
                 <div class="col-9">
                     <div class="textHP1 text-center">
