Added data of unemployment to the JSON file and tried to make new charts on statistics.html.

--- a/statistics.html
+++ b/statistics.html
@@ -9,11 +9,6 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
 
-    <script type="text/javascript" src="assets/js/d3.min.js"></script>
-    <script type="text/javascript" src="assets/js/crossfilter.min.js"></script>
-    <script type="text/javascript" src="assets/js/dc.min.js"></script>
-    <script type="text/javascript" src="assets/js/queue.min.js"></script>
-
     <title>Charity Base: Statistics Page</title>
 
 </head>
@@ -61,6 +56,8 @@
                     <div class="chartStyling1">
                         <div id="gdp-per-capita-chart"></div>
                         <div id="gini-coefficient-chart"></div>
+                        <div id="unemployment-rate-pie-chart"></div>
+                        <div id="unemployment-rate-female"></div>
                         <p>DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan</p>
                     </div>
                 </div>
@@ -92,10 +89,15 @@
 
     </section>
 
-    <script type="text/javascript" src="assets/js/statistics.js"></script>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    
+    <script type="text/javascript" src="assets/js/d3.min.js"></script>
+    <script type="text/javascript" src="assets/js/crossfilter.min.js"></script>
+    <script type="text/javascript" src="assets/js/dc.min.js"></script>
+    <script type="text/javascript" src="assets/js/queue.min.js"></script>
+    
+    <script type="text/javascript" src="assets/js/statistics.js"></script>
 
 </body>
 
@@ -113,3 +115,7 @@ https://beta.grafiti.io/facts/557233-extreme-poverty-asia-2018
 
 statistics:
 https://beta.grafiti.io/facts/557233-extreme-poverty-asia-2018
+https://tradingeconomics.com/country-list/unemployment-rate
+
+
+-->
