Worked on the codes for the charts on the Statistics page and wrote more Vanilla Javascript codes for the Contact page and Homepage, in order to have more interactive effects.

--- a/contact.html
+++ b/contact.html
@@ -68,12 +68,12 @@
 
                 <div class="row">
                     <div class="forms center-form">
-                        <input type="text" name="name" placeholder="Name" required />
+                        <input type="text" name="name" id="name" placeholder="Name" required />
                     </div>
                 </div>
                 <div class="row">
                     <div class="forms center-form">
-                        <input type="text" name="email" placeholder="Email Address" required />
+                        <input type="text" name="email" id="email" placeholder="Email Address" required />
                     </div>
                 </div>
                 <div class="row">
@@ -85,7 +85,7 @@
 
                 <div class="row">
                     <div class="formsSubmit center-form">
-                        <input type="submit" value="Submit" />
+                        <input type="submit" value="Submit" id="submitBtn" />
                     </div>
                 </div>
             </form>
