--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="col-sm-12 text-center">
                     <section class="section">
                         <h2 class="header">The Struggle for Food and Health Care.</h2>
-                        <p class="text2">In some countries, a single plate of food can even cost up to around 70$ or even about 200$. About 45% children, under the age of five, are caused to pass away, due to malnutrition. In many countries, people live in slums, ran
+                        <p class="text2 text-effect text-appear">In some countries, a single plate of food can even cost up to around 70$ or even about 200$. About 45% children, under the age of five, are caused to pass away, due to malnutrition. In many countries, people live in slums, ran
                             away, suffer mentally and physically from wars, got affected by natural disasters, etc. <span id="dots1" class="dots">...</span><span id="more1" class="more">So, they do not have much access to nutritions, medications or shelter and require various
                                 kinds of support! For statistics, please click <a href="statistics.html">here!</a>
                             
