Tried out some new ways of coding charts for the 'Statistics' page and worked on the calculators for donate.html.

--- a/donate.html
+++ b/donate.html
@@ -95,9 +95,11 @@
             <input type="text" name="" class="screenTotal" placeholder="Add up your spendings" />
         </form>
         <button type="button" class="btn-equal7 calcBtnStyle calcBtnGreen">=</button>
+        <button type="button" class="btn-clear7 calcBtnStyle calcBtnRed">C</button>
         <form>
             <input type="text" name="" class="screenTotal2" placeholder="Result" />
         </form>
+        <button type="button" class="btn-clear8 calcBtnStyle calcBtnRed">C</button>
 
     </section>
 
